--- a/src/css/Auth.css
+++ b/src/css/Auth.css
@@ -1,13 +1,13 @@
 .Auth {
-  width: 25rem;
-  height: 35rem;
+  width: var(--base-width);
+  height: var(--base-height);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--white-color);
   border-radius: 10px;
-  margin-bottom: 1rem;
+  margin-bottom: var(--margin-bottom-md);
 }
 
 .Auth-logo {
@@ -15,13 +15,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: var(--margin-bottom-sm);
 }
 
 .Clone-Twitter {
   font-family: 'Fugaz One', cursive;
   font-size: 2rem;
-  color: #1da1f2;
+  color: var(--primary-color);
 }
 
 .form {
@@ -34,7 +34,7 @@
 .account-form {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
+  margin-bottom: var(--margin-bottom-md);
 }
 
 .label {
@@ -64,7 +64,7 @@
   outline: none;
   border: none;
   cursor: pointer;
-  margin-bottom: 0.5rem;
+  margin-bottom: var(--margin-bottom-sm);
 }
 
 .btn-account {
@@ -84,7 +84,7 @@
   font-size: 1rem;
   text-decoration: underline;
   cursor: pointer;
-  margin-bottom: 1rem;
+  margin-bottom: var(--margin-bottom-md);
   text-align: center;
   width: 80%;
 }
