--- a/src/css/CreateTweet.css
+++ b/src/css/CreateTweet.css
@@ -1,6 +1,6 @@
 .tweet-form {
   position: relative;
-  margin-bottom: 0.5rem;
+  margin-bottom: var(--margin-bottom-sm);
 }
 
 .tweet-area {
@@ -9,15 +9,13 @@
   height: 4rem;
   outline: none;
   padding: 0.5rem;
-  border: 1px solid #e5e5e5;
+  border: 1px solid var(--border-color);
   border-radius: 3px;
-  caret-color: #1da1f2;
   overflow: scroll;
-  resize: none;
 }
 
 .tweet-area::placeholder {
-  color: #d2d2d2;
+  color: var(--placeholder-color);
   font-size: 1rem;
 }
 
@@ -26,14 +24,14 @@
 }
 
 .tweet-area::-webkit-scrollbar-thumb {
-  background-color: #fedd47;
+  background-color: var(--point-color);
   border-radius: 10px;
   background-clip: padding-box;
   border: 2px solid transparent;
 }
 
 .tweet-area::-webkit-scrollbar-track {
-  background-color: #fff;
+  background-color: var(--white-color);
   border-radius: 10px;
 }
 
@@ -51,12 +49,12 @@
 }
 
 .input-img {
-  color: #d5d5d5;
+  color: var(--placeholder-color);
   cursor: pointer;
 }
 
 .input-img:hover {
-  color: #1da1f2;
+  color: var(--primary-color);
 }
 
 .btn-send {
@@ -75,7 +73,7 @@
 }
 
 .submit {
-  color: #1da1f2;
+  color: var(--primary-color);
 }
 
 .attachment-box {
@@ -85,7 +83,7 @@
   width: 24rem;
   height: 7rem;
   padding: 0.5rem;
-  border: 1px dashed #e5e5e5;
+  border: 1px dashed var(--border-color);
   border-radius: 3px;
 }
 
@@ -101,19 +99,19 @@
   font-size: 0.8rem;
   border: none;
   outline: none;
-  color: #fff;
-  background-color: #1da1f2;
+  color: var(--white-color);
+  background-color: var(--primary-color);
   border-radius: 3px;
   padding: 0.5rem 0.8rem;
   cursor: pointer;
 }
 
 .btn-cancel {
-  background-color: #d5d5d5;
+  background-color: var(--placeholder-color);
 }
 
 .btn-cancel:hover {
-  background-color: #1da1f2;
+  background-color: var(--primary-color);
 }
 
 .visually-hidden {
