--- a/src/css/EditProfile.css
+++ b/src/css/EditProfile.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 24rem;
-  height: 34%;
+  height: 39%;
   padding: 0.5rem;
-  border: 1px dashed #e5e5e5;
+  border: 1px dashed var(--border-color);
   border-radius: 3px;
-  margin-bottom: 1rem;
+  margin-bottom: var(--margin-bottom-md);
 }
 
 .edit-form {
@@ -44,14 +44,17 @@
   margin: 5px;
 }
 
+.edit-userImg-icon {
+  color: var(--primary-color);
+}
+
 #Profile-userName,
 #Profile-userBio {
   width: 90%;
   padding: 0.5rem 0.7rem;
-  border: 1px solid #1da1f2;
+  border: 1px solid var(--primary-color);
   color: #333;
   border-radius: 3px;
-  caret-color: #1da1f2;
   margin-bottom: 0.5rem;
 }
 
@@ -61,15 +64,15 @@
 
 .btn-save {
   position: absolute;
-  top: 105px;
+  top: 130px;
   right: 0;
 }
 
 .btn-edit-profile {
   font-size: 1rem;
-  color: #1da1f2;
+  color: var(--primary-color);
   background-color: transparent;
   border: 1px solid #1da1f2;
   border-radius: 20px;
-  margin-bottom: 1rem;
+  margin-bottom: var(--margin-bottom-md);
 }
