--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -15,7 +15,7 @@
 .Profile-userImg {
   width: 6rem;
   height: 6rem;
-  border: 1px solid #fedd47;
+  border: 1px solid var(--point-color);
   border-radius: 50%;
   margin-right: 1rem;
 }
@@ -40,9 +40,9 @@
   top: 10px;
   right: 10px;
   font-size: 1rem;
-  color: #1da1f2;
+  color: var(--primary-color);
   background-color: transparent;
-  border: 1px solid #1da1f2;
+  border: 1px solid var(--primary-color);
   border-radius: 20px;
 }
 
