--- a/src/css/Tweet.css
+++ b/src/css/Tweet.css
@@ -95,20 +95,25 @@
   overflow: hidden;
 }
 
-.edit-form {
-  position: relative;
+.edit-box {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0.5rem;
+  border-bottom: 1px solid var(--border-color);
+  margin-bottom: 1rem;
 }
 
 .edit-textarea {
   width: 17.5rem;
-  height: 4rem;
-  padding: 1.5rem 0.5rem 0.5rem 0.5rem;
+  height: 5rem;
+  padding: 0.5rem;
   caret-color: var(--primary-color);
   outline: none;
   border: 1px dashed var(--border-color);
   background-color: #fff;
   border-radius: 3px;
   resize: none;
+  margin-right: 5px;
 }
 
 .edit-textarea::placeholder {
@@ -133,17 +138,18 @@
 }
 
 .btn-edit-box {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.btn-control.btn-okay {
-  padding: 0.7rem 1.2rem;
+.btn-control.btn-okay,
+.btn-control.btn-cancel {
+  padding: 0.4rem 0.9rem;
   background-color: var(--placeholder-color);
 }
 
-.btn-control.btn-okay:hover {
+.btn-control.btn-okay:hover,
+.btn-control.btn-cancel:hover {
   background-color: var(--primary-color);
 }
