--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,6 +1,7 @@
 .Clone-container {
+  position: relative;
   width: 25rem;
-  height: 30rem;
+  height: 34rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
