--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -1,23 +1,34 @@
+.Navigation {
+  position: fixed;
+  width: 24rem;
+  background-color: #fff;
+  border-bottom: 1px solid var(--border-color);
+  z-index: 2;
+}
+
 .Navigation-box {
+  height: 4.5rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   align-items: center;
   font-size: 1rem;
-  transform: translate(-10px, 5px);
-  z-index: -2;
 }
 
 .Navigation-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 6rem;
-  font-weight: 400;
-  height: 3.5rem;
-  background-color: #fff;
-  border: 1px solid var(--border-color);
-  border-radius: 3px;
-  margin-left: 3px;
+  border: none;
+}
+
+.logo-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  margin: auto;
 }
 
 .link-item {
