--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,6 +27,12 @@ body {
   background-color: var(--point-color);
 }
 
+@media screen and (max-width: 375px) {
+  body {
+    font-size: 56.25%;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -105,6 +111,21 @@ li {
   background-color: #fff;
   border-radius: 8px;
   overflow-y: scroll;
+}
+
+@media screen and (max-width: 375px) {
+  .Main {
+    width: 90%;
+    border-radius: 0;
+    overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .Main {
+    width: 100%;
+    border-radius: 0;
+  }
 }
 
 .Main::-webkit-scrollbar {
