--- a/src/css/EditProfile.css
+++ b/src/css/EditProfile.css
@@ -87,3 +87,9 @@
   border-radius: 20px;
   margin-bottom: var(--margin-bottom-md);
 }
+
+@media screen and (max-width: 375px) {
+  .btn-edit-profile {
+    font-size: 0.9rem;
+  }
+}
