--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -8,7 +8,7 @@
 
 .Profile {
   width: 100%;
-  padding: 1rem;
+  padding: 0.5rem;
   position: relative;
   justify-content: flex-start;
 }
@@ -29,6 +29,13 @@
   margin-right: 1rem;
 }
 
+@media screen and (max-width: 375px) {
+  .Profile-userImg {
+    width: 5.5rem;
+    height: 5.5rem;
+  }
+}
+
 .Profile-userText {
   height: 100%;
   display: flex;
@@ -43,8 +50,20 @@
   font-weight: 700;
 }
 
+@media screen and (max-width: 375px) {
+  .Profile-userName {
+    font-size: 1rem;
+  }
+}
+
 .Profile-userBio {
   font-size: 0.9rem;
+}
+
+@media screen and (max-width: 375px) {
+  .Profile-userBio {
+    font-size: 0.8rem;
+  }
 }
 
 .btn-signOut {
@@ -53,6 +72,13 @@
   background-color: transparent;
   border: 1px solid var(--primary-color);
   border-radius: 20px;
+  align-self: start;
+}
+
+@media screen and (max-width: 375px) {
+  .btn-signOut {
+    font-size: 0.9rem;
+  }
 }
 
 .label {
