--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   align-items: center;
   background-color: var(--white-color);
+  padding: 0.5rem;
   margin-bottom: 1rem;
 }
 
