--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,7 @@
   --text-color: #333;
   --border-color: #eeeeee;
   --white-color: #ffffff;
-  --unseleted-color: #999;
+  --unselected-color: #999;
   --placeholder-color: #d2d2d2;
 
   --main-font: 'Source Sans Pro', sans-serif;
