--- a/src/css/Tweet.css
+++ b/src/css/Tweet.css
@@ -32,7 +32,7 @@
 }
 
 .tweet-date {
-  color: var(--unseleted-color);
+  color: var(--unselected-color);
   font-size: 0.7rem;
   font-weight: 400;
   letter-spacing: -0.05em;
